css/style.css
:root{
    --bs-gutter-x: 0rem;
    --bs-gutter-y: 0rem;  
}
body{
    height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
}
img{
    width: 50px;
    border-radius: 50%;
}
.row{
    height: 100%;
}
.row > *{
    padding: 0;
}
.color-green-bar{
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    background-color: #009688;
    height: 150px;
}
.fix-container-heigth{
    min-width: 1400px;
    position: relative;
    height: 90vh;
    background-color: white;
}
.card-left,.card-right{
    display: flex;
    flex-direction: column;
    flex-shrink: 0;
    height: 100%;
    
}
.card-left h2{
    padding: 0.5rem;
}
.my-avatar{
    background-color: #eaeaea;
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 1rem .5rem;
}
.my-avatar i,.search-bar i{
    color: #b1b1b1;
    padding: 0 .5rem;
    
}
.left-avatar,.rigth-avatar{
    display: flex;
    align-items: center;
    
}
.bell-icon{
    background-color: white;
    border-radius: 50%;
}
.bell-icon i{
    padding: .5rem;
    font-size: 30px;
    color: #8edafc;
}
.alert{
    background-color: #8edafc;
}
.chat-list-card{
    position: relative;
    
    
}
.card-grey-class{
    background-color: #e9ebeb!important; 
}
.rigth-avatar-time{
    position: absolute;
    top: 5px;
    right: 5px;
}
.main-chat{
    background-image: url("../img/mine.jpg");
}
.search-bar-chat {
    background-color: #f3eeea;
   
}
.search-bar-chat i{
    
    color: #6b7376;
}
.sent-message{
    width: 60%;
    background-color: #d5f9ba;
    margin-left: auto;
    border-radius: 10px;
    margin-bottom: 1rem;
}
.receveid-message{
    width: 60%;
    background-color: white;
    border-radius: 10px;
    margin-bottom: 1rem;

}

